--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,8 +24,10 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.562.0",
     "next": "^15.0.0",
+    "pg": "^8.16.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "server-only": "^0.0.1",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7"
   },
@@ -35,6 +37,7 @@
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.2",
     "@types/node": "^20.11.30",
+    "@types/pg": "^8.16.0",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
     "@types/testing-library__jest-dom": "^6.0.0",
