--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "lucide-react": "^0.562.0",
     "next": "^15.0.0",
     "pg": "^8.16.3",
+    "minio": "^7.0.19",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "server-only": "^0.0.1",
