chore: set Node engine to 20.x for Vercel builds

--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "next": "15.5.9",
     "eslint-config-next": "15.5.9"
   },
+  "engines": {
+    "node": "20.x"
+  },
   "scripts": {
     "build": "cd frontend && pnpm install && pnpm run build",
     "dev": "cd frontend && pnpm dev",
