chore: use npm in root build script to avoid pnpm fetch errors on Vercel

--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "node": "20.x"
   },
   "scripts": {
-    "build": "cd frontend && pnpm install && pnpm run build",
-    "dev": "cd frontend && pnpm dev",
-    "start": "cd frontend && pnpm start"
+    "build": "cd frontend && npm ci && npm run build",
+    "dev": "cd frontend && npm run dev",
+    "start": "cd frontend && npm run start"
   }
 }
