--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "lint:style": "stylelint \"**/*.{css,scss}\"",
-    "lint:ci": "pnpm lint && pnpm lint:style",
+    "lint:ci": "npm run lint && npm run lint:style",
     "typecheck": "tsc --noEmit",
     "test": "vitest",
     "test:unit": "vitest run",
@@ -53,8 +53,6 @@
     "tailwindcss": "^3.4.13",
     "typescript": "^5.6.3",
     "vitest": "^1.6.0"
-  },
-  "engines": {
-    "node": ">=20"
   }
+
 }
