--- a/package.json
+++ b/package.json
@@ -6,12 +6,10 @@
     "next": "15.5.9",
     "eslint-config-next": "15.5.9"
   },
-  "engines": {
-    "node": "20.x"
-  },
+
   "scripts": {
-    "build": "cd frontend && pnpm install && pnpm run build",
-    "dev": "cd frontend && pnpm dev",
-    "start": "cd frontend && pnpm start"
+    "build": "cd frontend && npm install && npm run build",
+    "dev": "cd frontend && npm run dev",
+    "start": "cd frontend && npm start"
   }
 }
