--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,10 @@
     "server-only": "^0.0.1",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7"
+  ,
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.39",
+    "tailwindcss": "^3.4.13"
   },
   "devDependencies": {
     "@playwright/test": "^1.48.2",
@@ -41,7 +45,6 @@
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
     "@types/testing-library__jest-dom": "^6.0.0",
-    "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
     "eslint-config-next": "^15.0.0",
     "jsdom": "^24.1.0",
@@ -50,7 +53,7 @@
     "stylelint": "15.11.0",
     "stylelint-config-standard": "34.0.0",
     "stylelint-config-tailwindcss": "1.0.0",
-    "tailwindcss": "^3.4.13",
+
     "typescript": "^5.6.3",
     "vitest": "^1.6.0"
   }
