--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,8 @@
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.13"
+    ,
+      "@types/node": "^20.11.30"
   },
   "devDependencies": {
     "@playwright/test": "^1.48.2",
