--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,23 +19,21 @@
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.4",
+    "@types/node": "^20.11.30",
+    "autoprefixer": "^10.4.19",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.562.0",
+    "minio": "^7.0.19",
     "next": "^15.0.0",
     "pg": "^8.16.3",
-    "minio": "^7.0.19",
+    "postcss": "^8.4.39",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "server-only": "^0.0.1",
     "tailwind-merge": "^3.4.0",
+    "tailwindcss": "^3.4.13",
     "tailwindcss-animate": "^1.0.7"
-  ,
-    "autoprefixer": "^10.4.19",
-    "postcss": "^8.4.39",
-    "tailwindcss": "^3.4.13"
-    ,
-      "@types/node": "^20.11.30"
   },
   "devDependencies": {
     "@playwright/test": "^1.48.2",
@@ -54,9 +52,7 @@
     "stylelint": "15.11.0",
     "stylelint-config-standard": "34.0.0",
     "stylelint-config-tailwindcss": "1.0.0",
-
     "typescript": "^5.6.3",
     "vitest": "^1.6.0"
   }
-
 }
