--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,14 +33,14 @@
     "server-only": "^0.0.1",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^3.4.13",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "@types/pg": "^8.16.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.48.2",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.2",
-    "@types/pg": "^8.16.0",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
     "@types/testing-library__jest-dom": "^6.0.0",
