--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,12 +25,12 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.562.0",
-    "minio": "^7.0.19",
-    "next": "^15.0.0",
+    "minio": "^8.0.6",
+    "next": "^16.1.6",
     "pg": "^8.16.3",
     "postcss": "^8.4.39",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "react-markdown": "^10.1.0",
     "server-only": "^0.0.1",
     "tailwind-merge": "^3.4.0",
@@ -42,11 +42,11 @@
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.2",
-    "@types/react": "^18.3.11",
-    "@types/react-dom": "^18.3.0",
+    "@types/react": "^19.2.10",
+    "@types/react-dom": "^19.2.3",
     "@types/testing-library__jest-dom": "^6.0.0",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "^15.0.0",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "^16.1.6",
     "jsdom": "^24.1.0",
     "postcss": "^8.4.39",
     "prettier": "^3.3.2",
@@ -54,6 +54,9 @@
     "stylelint-config-standard": "34.0.0",
     "stylelint-config-tailwindcss": "1.0.0",
     "typescript": "^5.6.3",
-    "vitest": "^1.6.0"
+    "vitest": "^4.0.18"
+  },
+  "overrides": {
+    "fast-xml-parser": "^5.3.4"
   }
 }
