--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
     "next": "15.5.9",
     "eslint-config-next": "15.5.9"
   },
-
   "scripts": {
-    "build": "cd frontend && npm install && npm run build",
+    "build": "cd frontend && npm install --loglevel=error && npm run build",
     "dev": "cd frontend && npm run dev",
     "start": "cd frontend && npm start"
   }
